--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,13 @@
   },
 
   "files.exclude": {
-    "**/.DS_Store": true,
     "**/.git": true,
-    "**/.hg": true,
     "**/.svn": true,
+    "**/.hg": true,
     "**/CVS": true,
+    "**/.DS_Store": true,
     "dist": true,
+    "**/node_modules": true
   },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
