Sync ElasticSearch data with Laravel

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 	"workspaceFolder": "/micro-catalog",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash"
+		"terminal.integrated.shell.linux": "/bin/bash",
+		"eslint.autoFixOnSave": false,
+		"editor.formatOnSave": false,
 	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": []
