--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "dist": true,
-    "**/node_modules": true
+    "**/node_modules": false
   },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
