--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ APP_ENV=dev
 ELASTIC_SEARCH_HOST=http://elasticsearch:9200
 ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
+
+RABBITMQ_URI=amqp://admin:admin@rabbitmq:5672
+
+# 0 - ACK
+# 1 - REQUEUE
+# 2 - NACK
+RABBITMQ_HANDLER_ERROR=0
