--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "@loopback/service-proxy": "^3.2.1",
     "@types/amqp-connection-manager": "^2.0.11",
     "@types/amqplib": "^0.8.0",
+    "@types/lodash": "^4.14.170",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
+    "lodash": "^4.17.21",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
   },
