--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prestart": "npm run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "npm run clean && npm run build"
+    "rebuild": "npm run clean && npm run build",
+    "console": "node ./dist/console.js"
   },
   "repository": {
     "type": "git",
@@ -53,19 +54,21 @@
     "@loopback/core": "^2.16.1",
     "@loopback/repository": "^3.7.0",
     "@loopback/rest": "^9.3.1",
+    "@loopback/rest-crud": "^0.7.4",
     "@loopback/rest-explorer": "^3.3.1",
     "@loopback/service-proxy": "^3.2.1",
-    "@types/amqp-connection-manager": "^2.0.11",
-    "@types/amqplib": "^0.8.0",
-    "@types/lodash": "^4.14.170",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
+    "class-transformer": "^0.4.0",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@types/amqp-connection-manager": "^2.0.11",
+    "@types/amqplib": "^0.8.0",
+    "@types/lodash": "^4.14.170",
     "@loopback/build": "^6.4.1",
     "source-map-support": "^0.5.19",
     "@loopback/testlab": "^3.4.1",
