--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
         run: docker-compose -f docker-compose.prod.yml up -d app elasticsearch
 
       - name: Waiting for containers
-        run: docker-compose run dockerize dockerize -wait http://elasticsearch:9200 -wait http://app:3001 -timeout 120s
+        run: >-
+          docker-compose -f docker-compose.prod.yml run dockerize dockerize
+          -wait http://elasticsearch:9200 -wait http://app:3001 -timeout 120s
 
       - name: Run tests
         run: docker exec -t app npm test
