--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,13 @@ jobs:
       - name: Run docker-compose
         run: docker-compose -f docker-compose.prod.yml up -d app elasticsearch
 
+      - name: Copy .env
+        run: docker exec -t app cp /home/node/app/.env.example /home/node/app/.env
+
       - name: Waiting for containers
         run: >-
           docker-compose -f docker-compose.prod.yml run dockerize dockerize
-          -wait http://elasticsearch:9200 -wait http://app:3001 -timeout 120s
+          -wait http://elasticsearch:9200/ -wait http://app:3000/ -timeout 120s
 
       - name: Run tests
         run: docker exec -t app npm test
