--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,12 +13,15 @@ services:
       - PORT=3000
     depends_on:
       - elasticsearch
+    networks:
+      - app-network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.13.2
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -27,6 +30,14 @@ services:
         hard: -1
     ports:
       - 9200:9200
+    networks:
+      - app-network
 
   dockerize:
     image: jwilder/dockerize
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
