--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^7.3.2",
+    "@loopback/authentication-jwt": "^0.9.2",
+    "@loopback/authorization": "^0.9.2",
     "@loopback/boot": "^3.4.1",
     "@loopback/core": "^2.16.1",
     "@loopback/repository": "^3.7.0",
